fix(hero): center-align floating stat cards via CSS vars

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -11020,11 +11020,11 @@ form textarea:required:valid {
           column-gap: 1rem;
   row-gap: 1.4rem;
   margin-top: 16rem;
-  max-width: 620px;
+  max-width: 680px;
 }
 @media only screen and (min-width: 1600px) {
   .hero-09-headline__tags {
-    max-width: 760px;
+    max-width: 820px;
   }
 }
 
@@ -11103,21 +11103,24 @@ form textarea:required:valid {
        -moz-box-shadow: 0px 4px 8px 0px rgba(var(--pt-purple-rgb), 0.3);
             box-shadow: 0px 4px 8px 0px rgba(var(--pt-purple-rgb), 0.3);
     z-index: 2;
+    top: 55%;
+    left: 50%;
+    --hero-card-offset-x: 0px;
+    --hero-card-offset-y: 0px;
+    -webkit-transform: translate(calc(-50% + var(--hero-card-offset-x)), calc(-50% + var(--hero-card-offset-y)));
+        -ms-transform: translate(calc(-50% + var(--hero-card-offset-x)), calc(-50% + var(--hero-card-offset-y)));
+            transform: translate(calc(-50% + var(--hero-card-offset-x)), calc(-50% + var(--hero-card-offset-y)));
   }
   .hero-09-objects__item.item-01 {
-    top: 58%;
-    right: -23%;
+    --hero-card-offset-x: 185px;
+    --hero-card-offset-y: 30px;
   }
   .hero-09-objects__item.item-02 {
-    left: -23%;
-    top: 58%;
+    --hero-card-offset-x: -185px;
+    --hero-card-offset-y: 30px;
   }
   .hero-09-objects__item.item-03 {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-    top: 74%;
+    --hero-card-offset-y: 150px;
   }
 }
 @media only screen and (min-width: 1600px) {
@@ -11125,19 +11128,15 @@ form textarea:required:valid {
     max-width: 220px;
   }
   .hero-09-objects__item.item-01 {
-    top: 56%;
-    right: -23%;
+    --hero-card-offset-x: 215px;
+    --hero-card-offset-y: 40px;
   }
   .hero-09-objects__item.item-02 {
-    left: -23%;
-    top: 56%;
+    --hero-card-offset-x: -215px;
+    --hero-card-offset-y: 40px;
   }
   .hero-09-objects__item.item-03 {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-    top: 72%;
+    --hero-card-offset-y: 170px;
   }
 }
 
